lib/saluki-metrics/tests/macros/06_invalid_level.stderr
error: metric level must be `info`, `debug`, or `trace`
 --> tests/macros/06_invalid_level.rs:6:22
  |
6 |     #[metric(level = warn)]
  |                      ^^^^
